# axum-template

./: Cargo.toml
src/: config.rs  lib.rs  main.rs  route.rs  state.rs
src/handlers/: frontend.rs  mod.rs  todo.rs
src/handlers/frontend/: index.html  index_example.html
src/handlers/todo/: conv.rs  schema.rs
src/repo/: mod.rs  todo.rs
