[package]
name = "axum-template"
authors = ["artiga033 <artiga033@hotmail.com>"]
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
dotenvy = "0.15.7"
envy = "0.4.2"
rust-embed = { version = "8.11.0", features = ["mime-guess"] }
serde = { version = "1.0.228", features = ["derive"] }
snafu = "0.8.9"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "net", "signal"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }

sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ], optional = true}

[features]
# an example implmentation of a "TODO List" app using sqlx and sqlite.
# This template should not presume user choice on DB choice, so a feature here is to gate the example.
example = ["dep:sqlx"]